--- a/src/components/ProductCard/ProductCard.css
+++ b/src/components/ProductCard/ProductCard.css
@@ -199,3 +199,27 @@
   opacity:0.7;
   border-radius:50%;
 }
+
+/*!SMALL DEVICES MEDIA QUERIES */
+@media only screen and (max-width: 480px) {
+
+}
+
+/*!TABLETS DEVICES*/
+@media only screen and (max-width: 768px) {
+
+}
+
+/*!DESKTOP DEVICES*/
+@media only screen and (max-width: 1024px) {
+  .card {
+    width: 250px;
+    height: 250px;
+    margin: 1rem;
+  }
+}
+
+/*!EXTRA LARGE DEVICES*/
+@media only screen and (max-width: 1200px) {
+
+}
