--- a/src/index.css
+++ b/src/index.css
@@ -129,11 +129,11 @@ body {
 }
 
 /*!SMALL DEVICES MEDIA QUERIES */
-@media only screen and (min-width: 360px) {
+@media only screen and (max-width: 480px) {
 }
 
 /*!TABLETS DEVICES*/
-@media only screen and (min-width: 601px) {
+@media only screen and (max-width: 768px) {
   .logo-img {
     left: 20px;
     top: 20px;
@@ -142,14 +142,18 @@ body {
 }
 
 /*!DESKTOP DEVICES*/
-@media only screen and (min-width: 1024px) {
+@media only screen and (max-width: 1024px) {
   .logo-img {
     left: 100px;
     top: 50px;
     width: 200px;
   }
+  .contact-image {
+    height: 200px;
+    width: 200px;
+  }
 }
 
 /*!EXTRA LARGE DEVICES*/
-@media only screen and (min-width: 1900px) {
+@media only screen and (max-width: 1900px) {
 }
