--- a/src/components/Counter/Counter.css
+++ b/src/components/Counter/Counter.css
@@ -2,7 +2,6 @@
   display: flex;
   flex: 2;
   align-items: center;
-  /* justify-content: center; */
   text-align: center;
 }
 
@@ -34,4 +33,25 @@
   background-color: aliceblue;
   border-radius: 50%;
   color: #282c34;
+}
+
+/*!SMALL DEVICES MEDIA QUERIES */
+@media only screen and (max-width: 480px) {
+  .cartItem__qty {
+    margin-left: 3px;
+    margin-right: 3px;
+    font-size: 15px;
+  }
+}
+
+/*!TABLETS DEVICES*/
+@media only screen and (max-width: 820px) {
+}
+
+/*!DESKTOP DEVICES*/
+@media only screen and (max-width: 1024px) {
+}
+
+/*!EXTRA LARGE DEVICES*/
+@media only screen and (min-width: 1200px) {
 }
