--- a/src/components/ItemCart/ItemCart.css
+++ b/src/components/ItemCart/ItemCart.css
@@ -46,3 +46,27 @@
   cursor: pointer;
   transform: scale(1.2);
 }
+
+/*!SMALL DEVICES MEDIA QUERIES */
+@media only screen and (max-width: 480px) {
+  .cartItem__row {
+    transform: scale(0.85) ;
+  }
+  .cartItem__info {
+    display: none;
+  }
+}
+
+/*!TABLETS DEVICES*/
+@media only screen and (max-width: 820px) {
+
+}
+
+/*!DESKTOP DEVICES*/
+@media only screen and (max-width: 1024px) {
+}
+
+/*!EXTRA LARGE DEVICES*/
+@media only screen and (min-width: 1200px) {
+
+}
