--- a/src/components/SummaryCart/SummaryCart.css
+++ b/src/components/SummaryCart/SummaryCart.css
@@ -1,8 +1,8 @@
 .cartSummary__container {
-  width: 30%;
+  width: 40%;
   display: flex;
   flex-direction: column;
-  margin: 20px;
+  margin: 20px 0;
 }
 
 .cartSummary__p {
@@ -10,4 +10,27 @@
   font-size: 12px;
   letter-spacing: 1px;
   color: rgb(160, 158, 158);
+}
+
+/*!SMALL DEVICES MEDIA QUERIES */
+@media only screen and (max-width: 480px) {
+}
+
+/*!TABLETS DEVICES*/
+@media only screen and (max-width: 820px) {
+  .cartSummary__container {
+    width: 100%;
+    padding: 20px;
+  }
+}
+
+/*!DESKTOP DEVICES*/
+@media only screen and (max-width: 1024px) {
+}
+
+/*!EXTRA LARGE DEVICES*/
+@media only screen and (min-width: 1200px) {
+  .cartSummary__container {
+    width: 30%;
+  }
 }
