--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -48,3 +48,24 @@
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
+
+/*!SMALL DEVICES MEDIA QUERIES */
+@media only screen and (max-width: 480px) {
+}
+
+/*!TABLETS DEVICES*/
+@media only screen and (max-width: 820px) {
+  .modal-content {
+    width: 90vw;
+    margin: 30px 10px 10px 10px;
+  }
+}
+
+/*!DESKTOP DEVICES*/
+@media only screen and (min-width: 1024px) {
+}
+
+/*!EXTRA LARGE DEVICES*/
+@media only screen and (min-width: 1200px) {
+
+}
