--- a/src/components/AppBarNav/AppNavBar.css
+++ b/src/components/AppBarNav/AppNavBar.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap");
+
 .main__container {
   min-height: 100vh;
   width: 100%;
