--- a/src/components/AlbumDetail/AlbumDetail.css
+++ b/src/components/AlbumDetail/AlbumDetail.css
@@ -18,14 +18,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0 2rem;
-  width: 40%;
+  width: 50%;
   z-index: 1;
 }
 
 .album__coverImage {
   width: 100%;
-  height: 100%;
+  height: fit-content;
   padding: 2rem;
 }
 
@@ -49,15 +48,21 @@
 }
 
 .album__title span {
-    animation:blinkingText 0.8s infinite;
+  animation: blinkingText 0.8s infinite;
 }
 
-@keyframes blinkingText{
-  0%{		color: aliceblue;	}
+@keyframes blinkingText {
+  0% {
+    color: aliceblue;
+  }
   /* 49%{	color: transparent;	} */
-  50%{	color: transparent;	}
+  50% {
+    color: transparent;
+  }
   /* 99%{	color:transparent;	} */
-  100%{	color: aliceblue;	}
+  100% {
+    color: aliceblue;
+  }
 }
 
 .album__price {
@@ -88,7 +93,7 @@
   margin-right: 2rem;
 }
 
-.action__text{
+.action__text {
   margin-right: 10px;
   padding: 7px 13px;
   border: 1px solid #6e0469;
@@ -98,28 +103,38 @@
   font-size: 10px;
 }
 
-
 /*!SMALL DEVICES MEDIA QUERIES */
-@media only screen and (max-width: 963px) {
+@media only screen and (max-width: 480px) {
+  .album__info {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .album__coverImage {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .album__cover {
+    width: 100%;
+  }
 }
 
-/*!MEDIUM DEVICES*/
-@media only screen and (max-width: 1300px) {
-  /* .album__coverImage img {
-    width: 400px;
-    height: 400px;
-  } */
+/*!TABLETS DEVICES*/
+@media only screen and (min-width: 481px) and (max-width: 820px) {
+  .album__cover {
+    width: 100%;
+    margin-top: 20px;
+    flex-direction: row;
+  }
 }
 
-/*!MEDIUM DEVICES*/
-@media only screen and (max-width: 2000px) {
-  /* .album__coverImage img {
-    width: 500px;
-    height: 500px;
-  } */
+/*!DESKTOP DEVICES*/
+@media only screen and (max-width: 1024px) {
 }
 
 /*!EXTRA LARGE DEVICES*/
-@media only screen and (min-width: 2000px) {
-
+@media only screen and (max-width: 1200px) {
+  .album__coverImage img {
+    max-width: 350px;
+    max-height: 350px;
+  }
 }
