--- a/src/components/Playlist/Playlist.css
+++ b/src/components/Playlist/Playlist.css
@@ -2,9 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0 2rem;
-  padding: 2rem;
   width: 50%;
+  padding: 2rem;
   z-index: 1;
 }
 
@@ -64,3 +63,31 @@
   align-items: center;
 }
 
+/*!SMALL DEVICES MEDIA QUERIES */
+@media only screen and (max-width: 480px) {
+  .playlist__container {
+    padding: 0;
+  }
+}
+
+/*!TABLETS DEVICES*/
+@media only screen and (max-width: 820px) {
+  .playlist__container {
+    width: 100%;
+    margin: 0;
+  }
+
+  .playlist__title {
+    font-size: 20px;
+    text-align: center;
+    margin-top: 20px;
+  }
+}
+
+/*!DESKTOP DEVICES*/
+@media only screen and (max-width: 1024px) {
+}
+
+/*!EXTRA LARGE DEVICES*/
+@media only screen and (max-width: 1200px) {
+}
