--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,7 @@ body {
 }
 
 .detail__container {
-  padding: 3rem 8rem;
+  padding: 50px 100px;
   color: aliceblue;
 }
 
@@ -74,7 +74,6 @@ body {
   min-height: 100vh;
   height: 100%;
   box-shadow: inset 0 0 0 100vw rgba(0, 0, 0, 0.5);
-
   /* Basic background styles */
   background: url("./assets/img/gallery/pexels-aleksandar-pasaric-2078071.jpg")
     center center no-repeat;
@@ -134,11 +133,14 @@ body {
 }
 
 /*!TABLETS DEVICES*/
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 820px) {
   .logo-img {
     left: 20px;
     top: 20px;
     width: 150px;
+  }
+  .detail__container {
+    flex-direction: column;
   }
 }
 
@@ -153,8 +155,12 @@ body {
     height: 200px;
     width: 200px;
   }
+  .detail__container {
+    padding: 25px 50px;
+    margin: 25px 0 0 0;
+  }
 }
 
 /*!EXTRA LARGE DEVICES*/
-@media only screen and (max-width: 1900px) {
+@media only screen and (max-width: 1200px) {
 }
